2006-10-08  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article_sweeper.rb 
	(ArticleSweeper::expire_for): Fix to clear article when Picture/Enrollment update.

2006-10-07  Akira TAGOH  <at@gclab.org>

	IMPORTANT: incompatible changes. BASEURL doesn't include the paths
	anymore such as 'notes', which managed on RoR. it shouldn't be
	configurable by any outside RoR, because it could be misleading easily
	in some functions.

	* donrails/app/models/ping.rb (Ping::send_ping_rest): add 'notes' in
	URL.

	* donrails/app/models/ping.rb (Ping::send_ping_xmlrpc): likewise.

	* donrails/app/models/ping.rb (Ping::send_ping_xmlrpc_extended):
	likewise.

	* donrails/app/models/article.rb (Article::sendping): likewise.

	* donrails/app/models/comment_mailer.rb (CommentMailer::notify):
	likewise.

	* donrails/app/controllers/login_controller.rb (LoginController::fix_article):
	likewise.
	(LoginController::add_article): likewise.

	* donrails/example/donrails_env.rb (BASEURL): remove 'notes'

2006-10-06  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails-1.3.4

	* donrails/app/models/ping.rb (Ping::send_ping_xmlrpc_extended): New method to send 'weblogUpdates.extendedPing'.
	* donrails/app/apis/don_web_service.rb (DonWebService::ping): set 'alias :extendedPing :ping'.
	(DonWebApi): likewise.
	* donrails/test/unit/ping_test.rb (PingTest): test for it.

2006-10-06  Akira TAGOH  <at@gclab.org>

	* donrails/lib/modules/moinmoin.rb (DonRails::Moinmoin::body_to_html):
	fixed the different behavior on the definition list.

2006-10-05  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails-1.3.3

	* donrails/app/controllers/login_controller.rb (LoginController::new_article): Fix for initial setup.
	(LoginController::add_article): likewise.

	* INSTALL.ja: Refine it.

	* Makefile: Add installertest.
	* donrails/example/database-installertest.yml: New file for it.
	* donrails/example/.environment.rb: likewise.
