@@ -1,3 +1,12 @@
+2006-10-09  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails-1.3.5
+	
+	* donrails/tool/tables-mysql.sql: Fix to use article_id.
+
+	* donrails/app/apis/meta_weblog_service.rb (MetaWeblogService::newMediaObject): New method for image update.
+	* donrails/app/models/picture.rb (Picture::filesave): likewise.
+
 2006-10-08  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
 	* donrails/app/models/article_sweeper.rb 
